--- a/primeiros-passos/index.html
+++ b/primeiros-passos/index.html
@@ -8,12 +8,34 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Sobre a Barbearia Alura</h1>
+    <header>
+        <h1 class="title-prin">Barbearia Alura</h1>
+    </header>
+    <img src="../banner/banner.jpg" alt="barbearia" id="banner">
 
-    <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+    <div class="segundo">
+        <h2 class="title-center">Sobre a Barbearia Alura</h1>
+        <p>
+            Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.
+        </p>
+        <p>
+            <em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em>
+        </p>
+        <p>
+            Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.
+        </p>
+    </div>
 
-    <p><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+    <div class="bene">
+        <h3 class="title-center">Benefícios</h2>
+        <ul>
+            <li class="itens">Atendimento aos clientes</li>
+            <li class="itens">Espaço diferenciado</li>
+            <li class="itens">Localizaçã</li>
+            <li class="itens">Profissionais Qualificados</li>
+        </ul>
 
-    <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+        <img src="../beneficios/beneficios.jpg" alt="corte" id="beneficio">
+    </div>
 </body>
 </html>
