--- a/barbearia-alura/index.html
+++ b/barbearia-alura/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1 class="title-prin">Barbearia Alura</h1>
     </header>
-    <img src="../banner/banner.jpg" alt="barbearia" id="banner">
+    <img src="./banner/banner.jpg" alt="barbearia" id="banner">
 
     <div class="segundo">
         <h2 class="title-center">Sobre a Barbearia Alura</h1>
@@ -35,7 +35,7 @@
             <li class="itens">Profissionais Qualificados</li>
         </ul>
 
-        <img src="../beneficios/beneficios.jpg" alt="corte" id="beneficio">
+        <img src="./beneficios/beneficios.jpg" alt="corte" id="beneficio">
     </div>
 </body>
 </html>
