--- a/barbearia-alura/index.html
+++ b/barbearia-alura/index.html
@@ -5,35 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barbearia Alura.</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style-home.css">
 </head>
 <body>
     <header>
-        <h1 class="title-prin">Barbearia Alura</h1>
+        <div class="caixa">
+            <h1><img src="./imagens/logo.png" alt="logo da barbearia alura"></h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="produtos.html">Produtos</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </nav>
+            <h1 class="title-prin">Barbearia Alura</h1>
+        </div>
     </header>
     <img src="./banner/banner.jpg" alt="barbearia" id="banner">
 
     <div class="segundo">
         <h2 class="title-center">Sobre a Barbearia Alura</h1>
+        <br>
         <p>
-            Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.
+            Localizada no coração da cidade a Barbearia Alura traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.
         </p>
-        <p>
-            <em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em>
+        <br>
+        <p class="itens">
+            Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em>
         </p>
+        <br>
         <p>
             Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.
         </p>
+        <br>
     </div>
 
     <div class="bene">
-        <h3 class="title-center">Benefícios</h2>
-        <ul>
+        <h3 class="title-center">Benefícios</h2>     
+        <ul class="lista">
             <li class="itens">Atendimento aos clientes</li>
             <li class="itens">Espaço diferenciado</li>
             <li class="itens">Localizaçã</li>
             <li class="itens">Profissionais Qualificados</li>
         </ul>
+       
 
         <img src="./beneficios/beneficios.jpg" alt="corte" id="beneficio">
     </div>
