--- a/barbearia-alura/index.html
+++ b/barbearia-alura/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barbearia Alura.</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style-home.css">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -19,39 +20,60 @@
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
             </nav>
-            <h1 class="title-prin">Barbearia Alura</h1>
+            <h1 class="title-one">Barbearia Alura</h1>
         </div>
     </header>
-    <img src="./banner/banner.jpg" alt="barbearia" id="banner">
 
-    <div class="segundo">
-        <h2 class="title-center">Sobre a Barbearia Alura</h1>
-        <br>
-        <p>
-            Localizada no coração da cidade a Barbearia Alura traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.
-        </p>
-        <br>
-        <p class="itens">
-            Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em>
-        </p>
-        <br>
-        <p>
-            Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.
-        </p>
-        <br>
-    </div>
+    <img src="./banner/banner.jpg" alt="barbearia" class="banner">
 
-    <div class="bene">
-        <h3 class="title-center">Benefícios</h2>     
-        <ul class="lista">
-            <li class="itens">Atendimento aos clientes</li>
-            <li class="itens">Espaço diferenciado</li>
-            <li class="itens">Localizaçã</li>
-            <li class="itens">Profissionais Qualificados</li>
-        </ul>
-       
+    <main>
+        <section class="segundo">
+            <h2 class="title-aling bkcor">Sobre a Barbearia Alura</h1>
 
-        <img src="./beneficios/beneficios.jpg" alt="corte" id="beneficio">
-    </div>
+            <img class="utensilios" src="./utensilios/utensilios.jpg" alt="Utensilios de um Barbeiro">
+            
+            <p>
+                Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.
+            </p>
+            <p class="itens">
+                <em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em>
+            </p>
+            <p>
+                Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.
+            </p>
+        </section>
+
+        <section class="mapa">
+            <h3 class="title-aling">Nosso estabelecimento</h3>
+            <p>Nosso estabelecimento está localizado no coração da cidade</p>
+            <div class="map-content">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.4498404749!2d-46.63452058518803!3d-23.58819478466955!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5a2b2ed7f3a1%3A0xab35da2f5ca62674!2sCaelum%20-%20Escola%20de%20Tecnologia!5e0!3m2!1spt-BR!2sbr!4v1659030831036!5m2!1spt-BR!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </section>
+
+        <section class="bene">
+            <h3 class="title-aling bkcor3">Benefícios</h2>
+
+            <div class="content-bene">
+                <ul class="lista">
+                    <li class="itens">Atendimento aos clientes</li>
+                    <li class="itens">Espaço diferenciado</li>
+                    <li class="itens">Localizaçã</li>
+                    <li class="itens">Profissionais Qualificados</li>
+                    <li class="itens">Pontualidade</li>
+                    <li class="itens">Limpeza</li>
+                </ul><img src="./beneficios/beneficios.jpg" alt="corte" class="beneficio">
+            </div>
+
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <img src="./imagens/logo-branco.png" alt="logo da barbearia alura branco">
+        <p class="copyright">&copy; Copyright Barbearia Alura - 2019/2022</p>
+    </footer>
 </body>
 </html>
