--- a/barbearia-alura/index.html
+++ b/barbearia-alura/index.html
@@ -20,7 +20,6 @@
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
             </nav>
-            <h1 class="title-one">Barbearia Alura</h1>
         </div>
     </header>
 
@@ -66,7 +65,7 @@
             </div>
 
             <div class="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="100%" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </section>
     </main>
