--- a/barbearia-alura/index.html
+++ b/barbearia-alura/index.html
@@ -27,19 +27,20 @@
 
     <main>
         <section class="segundo">
-            <h2 class="title-aling bkcor">Sobre a Barbearia Alura</h1>
-
-            <img class="utensilios" src="./utensilios/utensilios.jpg" alt="Utensilios de um Barbeiro">
-            
-            <p>
-                Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.
-            </p>
-            <p class="itens">
-                <em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em>
-            </p>
-            <p>
-                Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.
-            </p>
+            <div class="two-center">
+                <h2 class="title-aling bkcor">Sobre a Barbearia Alura</h1>
+                <img class="utensilios" src="./utensilios/utensilios.jpg" alt="Utensilios de um Barbeiro">
+                
+                <p>
+                    Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.
+                </p>
+                <p class="itens">
+                    <em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em>
+                </p>
+                <p>
+                    Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.
+                </p>
+            </div>
         </section>
 
         <section class="mapa">
