deixando todas as páginas responsivel

--- a/barbearia-alura/contato.html
+++ b/barbearia-alura/contato.html
@@ -7,6 +7,7 @@
     <title>Contato - Barbearia Alura</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -36,7 +37,7 @@
             <label for="mensagem">Mensagem</label>
             <textarea id="mensagem" class="input-padrao" required cols="30" rows="10"></textarea>
 
-            <fieldset>
+            <fieldset class="correto">
                 <legend>Como prefere o nosso contato?</legend>
                 <label for="radio-email"><input type="radio" name="contato" value="email" id="radio-email">Email</label>
                 
@@ -45,7 +46,7 @@
                 <label for="radio-whatsapp"><input type="radio" name="contato" value="whatsapp" id="radio-whatsapp" checked>WhatsApp</label>
             </fieldset>
 
-            <fieldset>
+            <fieldset class="correto">
                 <legend>Qual horário prefere ser atendido?</legend>
                 <select>
                     <option>Manhã</option>
