--- a/barbearia-alura/produtos.html
+++ b/barbearia-alura/produtos.html
@@ -7,6 +7,7 @@
     <title>Produtos - Barbearia Alura</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -23,26 +24,28 @@
     </header>
 
     <main>
-        <ul class="produtos">
-            <li>
-                <h2>Cabelo</h2>
-                <img src="./imagens/cabelo.jpg" alt="">
-                <p class="pro-descricao">Na tesoura ou máquina, como o cliente preferir</p>
-                <p class="produto-preco">R$ 25,00</p>
-            </li>
-            <li>
-                <h2>Barba</h2>
-                <img src="./imagens/barba.jpg" alt="">
-                <p class="pro-descricao">Corte e desenho profissional de barba</p>
-                <p class="produto-preco">R$ 18,00</p>
-            </li>
-            <li>
-                <h2>Cabelo+Barba</h2>
-                <img src="./imagens/cabelo+barba.jpg" alt="">
-                <p class="pro-descricao">Pacote completo de cabelo e barba</p>
-                <p class="produto-preco">R$ 35,00</p>
-            </li>
-        </ul>
+        <section class="pro-dinamico">
+            <ul class="produtos">
+                <li>
+                    <h2>Cabelo</h2>
+                    <img src="./imagens/cabelo.jpg" alt="" class="bora">
+                    <p class="pro-descricao">Na tesoura ou máquina, como o cliente preferir</p>
+                    <p class="produto-preco">R$ 25,00</p>
+                </li>
+                <li>
+                    <h2>Barba</h2>
+                    <img src="./imagens/barba.jpg" alt="" class="bora">
+                    <p class="pro-descricao">Corte e desenho profissional de barba</p>
+                    <p class="produto-preco">R$ 18,00</p>
+                </li>
+                <li>
+                    <h2>Cabelo + Barba</h2>
+                    <img src="./imagens/cabelo+barba.jpg" alt="" class="bora">
+                    <p class="pro-descricao">Pacote completo de cabelo e barba</p>
+                    <p class="produto-preco">R$ 35,00</p>
+                </li>
+            </ul>
+        </section>
     </main>
 
     <footer>
