--- a/barbearia-alura/produtos.html
+++ b/barbearia-alura/produtos.html
@@ -24,8 +24,8 @@
     </header>
 
     <main>
-        <section class="pro-dinamico">
-            <ul class="produtos">
+        <section class="produtos">
+            <ul>
                 <li>
                     <h2>Cabelo</h2>
                     <img src="./imagens/cabelo.jpg" alt="" class="bora">
