--- a/skate-alura/flex-e-grid-main/index.html
+++ b/skate-alura/flex-e-grid-main/index.html
@@ -15,6 +15,7 @@
     <header class="cabecalho">
         <button class="cabecalho__menu" aria-label="Menu"><i></i></button>
         <img src="assets/img/logo.svg" alt="Logotipo da HZC" class="cabecalho__logo">
+        <p class="cabecalho__perfil">Bruno Lopez</p>
         <button class="cabecalho__notificacao" aria-label="Notificação"><i></i></button>
     </header>
     <nav class="menu-lateral">
@@ -39,45 +40,107 @@
                 <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assistir agora</button>
             </div>
         </article>
+        <article class="cartao cartao--recentes">
+            <h3 class="cartao__titulo">Vídeos recentes</h3>
+            <a href="#" class="cartao__link">Ver todos</a>
+            <ul class="cartao__lista">
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                </li>
+            </ul>
+        </article>
         <section class="secao">
             <h3 class="titulo-secao">vídeos mais vistos</h3>
             <article class="cartao">
                 <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
-                    <p class="cartao__perfil">Bruno Lopez</p>
-                    <h3 class="cartao__titulo">HZC - Título</h3>
+                    <p class="cartao__perfil">André Soares</p>
+                    <h3 class="cartao__titulo">HZC - Tudo sem Padrin</h3>
                     <p class="cartao__info cartao__info--tempo">33 minutos</p>
                     <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
                 </div>
             </article>
             <article class="cartao">
-                <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <img src="assets/img/video_2.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
                     <p class="cartao__perfil">Bruno Lopez</p>
-                    <h3 class="cartao__titulo">HZC - Título</h3>
+                    <h3 class="cartao__titulo">HZC - Enter The Hu-flez</h3>
                     <p class="cartao__info cartao__info--tempo">33 minutos</p>
                     <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
                 </div>
             </article>
             <article class="cartao">
-                <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <img src="assets/img/video_3.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
-                    <p class="cartao__perfil">Bruno Lopez</p>
-                    <h3 class="cartao__titulo">HZC - Título</h3>
+                    <p class="cartao__perfil">Luiza Sampaio</p>
+                    <h3 class="cartao__titulo">HZC - Vol.3</h3>
                     <p class="cartao__info cartao__info--tempo">33 minutos</p>
                     <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
                 </div>
             </article>
             <article class="cartao">
-                <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <img src="assets/img/video_4.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
                     <p class="cartao__perfil">Bruno Lopez</p>
-                    <h3 class="cartao__titulo">HZC - Título</h3>
+                    <h3 class="cartao__titulo">HZC - Love Machine</h3>
                     <p class="cartao__info cartao__info--tempo">33 minutos</p>
                     <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
                 </div>
             </article>
         </section>
+        <article class="cartao cartao--recentes">
+            <h3 class="cartao__titulo">Vídeos recentes</h3>
+            <a href="#" class="cartao__link">Ver todos</a>
+            <ul class="cartao__lista">
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                </li>
+            </ul>
+        </article>
         <article class="cartao cartao--destaque">
             <img src="assets/img/banner-mobile_1.png" alt="Banner do cartao" class="cartao__imagem">
             <div class="cartao__conteudo">
