--- a/skate-alura/flex-e-grid-main/index.html
+++ b/skate-alura/flex-e-grid-main/index.html
@@ -48,27 +48,27 @@
                 <li class="cartao__item">
                     <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
                     <h4 class="cartao__item-titulo">HZC - Love machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <p class="cartao__item-perfil">Júlio Fonseca</p>
                 </li>
                 <li class="cartao__item">
-                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <img src="assets/img/miniatura_2.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Vol.3</h4>
+                    <p class="cartao__item-perfil">Júlio Fonseca</p>
                 </li>
                 <li class="cartao__item">
-                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <img src="assets/img/miniatura_3.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Pescaria na Urca</h4>
+                    <p class="cartao__item-perfil">Júlio Fonseca</p>
                 </li>
                 <li class="cartao__item">
-                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <img src="assets/img/miniatura_4.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">Vidalocagl - Guerreiros do Asfalto</h4>
+                    <p class="cartao__item-perfil">Júlio Fonseca</p>
                 </li>
                 <li class="cartao__item">
-                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <img src="assets/img/miniatura_5.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">Vidalocagl - Não Importa o nível</h4>
+                    <p class="cartao__item-perfil">Júlio Fonseca</p>
                 </li>
             </ul>
         </article>
@@ -112,32 +112,32 @@
             </article>
         </section>
         <article class="cartao cartao--recentes produtos-recentes">
-            <h3 class="cartao__titulo">Vídeos recentes</h3>
+            <h3 class="cartao__titulo">Novas artes</h3>
             <a href="#" class="cartao__link">Ver todos</a>
             <ul class="cartao__lista">
                 <li class="cartao__item">
                     <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+                    <h4 class="cartao__item-titulo">Sem título 01</h4>
                     <p class="cartao__item-perfil">Bruno Lopez</p>
                 </li>
                 <li class="cartao__item">
                     <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+                    <h4 class="cartao__item-titulo">Sem título 02</h4>
                     <p class="cartao__item-perfil">Bruno Lopez</p>
                 </li>
                 <li class="cartao__item">
                     <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+                    <h4 class="cartao__item-titulo">Segurança</h4>
                     <p class="cartao__item-perfil">Bruno Lopez</p>
                 </li>
                 <li class="cartao__item">
                     <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+                    <h4 class="cartao__item-titulo">Malunguisse</h4>
                     <p class="cartao__item-perfil">Bruno Lopez</p>
                 </li>
                 <li class="cartao__item">
                     <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love machine</h4>
+                    <h4 class="cartao__item-titulo">Coroa de Converse</h4>
                     <p class="cartao__item-perfil">Bruno Lopez</p>
                 </li>
             </ul>
@@ -146,50 +146,50 @@
             <img src="assets/img/banner-mobile_2.png" alt="Banner do cartao" class="cartao__imagem cartao__imagem--mobile">
             <img src="assets/img/banner_2.png" alt="Banner do cartao" class="cartao__imagem cartao__imagem--desktop">
             <div class="cartao__conteudo">
-                <p class="cartao__destaque">Vídeo em destaque</p>
-                <h3 class="cartao__titulo">HZC - Título</h3>
-                <p class="cartao__perfil">Bruno Lopez</p>
-                <p class="cartao__info cartao__info--tempo">33 minutos</p>
-                <p class="cartao__info cartao__info--visualizacao">33 visualizações</p>
-                <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assistir agora</button>
+                <p class="cartao__destaque">Nova arte</p>
+                <h3 class="cartao__titulo">Only Zikas - Lagoa Dompa Club</h3>
+                <p class="cartao__perfil">Jõao ZMS</p>
+                <p class="cartao__info cartao__info--preco">33.33</p>
+                <p class="cartao__info cartao__info--visualizacao">53 visualizações</p>
+                <button class="cartao__botao cartao__botao--loja cartao__botao--destaque">Comprar agora</button>
             </div>
         </article>
         <section class="secao secao-produtos">
-            <h3 class="titulo-secao">vídeos mais vistos</h3>
+            <h3 class="titulo-secao">Camisas mais recentes</h3>
             <article class="cartao">
-                <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <img src="assets/img/produto_1.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
-                    <p class="cartao__perfil">Bruno Lopez</p>
-                    <h3 class="cartao__titulo">HZC - Título</h3>
-                    <p class="cartao__info cartao__info--tempo">33 minutos</p>
-                    <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+                    <p class="cartao__perfil">André Soares</p>
+                    <h3 class="cartao__titulo">IBM</h3>
+                    <p class="cartao__info cartao__info--preco">33.33</p>
+                    <button class="cartao__botao cartao__botao--loja" aria-label="Assistir agora"></button>
                 </div>
             </article>
             <article class="cartao">
-                <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <img src="assets/img/produto_2.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
                     <p class="cartao__perfil">Bruno Lopez</p>
-                    <h3 class="cartao__titulo">HZC - Título</h3>
-                    <p class="cartao__info cartao__info--tempo">33 minutos</p>
-                    <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+                    <h3 class="cartao__titulo">Huflez Crew Philosophy Club</h3>
+                    <p class="cartao__info cartao__info--preco">33.33</p>
+                    <button class="cartao__botao cartao__botao--loja" aria-label="Assistir agora"></button>
                 </div>
             </article>
             <article class="cartao">
-                <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <img src="assets/img/produto_3.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
-                    <p class="cartao__perfil">Bruno Lopez</p>
-                    <h3 class="cartao__titulo">HZC - Título</h3>
-                    <p class="cartao__info cartao__info--tempo">33 minutos</p>
-                    <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+                    <p class="cartao__perfil">Luiza Sampaio</p>
+                    <h3 class="cartao__titulo">Corujita noturna</h3>
+                    <p class="cartao__info cartao__info--preco">33.33</p>
+                    <button class="cartao__botao cartao__botao--loja" aria-label="Assistir agora"></button>
                 </div>
             </article>
             <article class="cartao">
-                <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <img src="assets/img/produto_4.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
                     <p class="cartao__perfil">Bruno Lopez</p>
-                    <h3 class="cartao__titulo">HZC - Título</h3>
-                    <p class="cartao__info cartao__info--tempo">33 minutos</p>
-                    <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+                    <h3 class="cartao__titulo">GGG - Gatin G Gorro</h3>
+                    <p class="cartao__info cartao__info--preco">33.33</p>
+                    <button class="cartao__botao cartao__botao--loja" aria-label="Assistir agora"></button>
                 </div>
             </article>
         </section>
